# atlas-clean-code-januar-2025

./: README.md
Decorator/: CMakeLists.txt  Client.h  main.cpp
Decorator/math/: Calculator.h  CalculatorImpl.h  CalculatorLogger.h  CalculatorSecure.h
NimSpielProjekt/: CMakeLists.txt  main.cpp
NimSpielProjekt/client/: GameClient.h
NimSpielProjekt/game/: AbstractGame.h  Game.h
NimSpielProjekt/game/nim/: NimGameImpl.h
NimSpielProjekt/game/nim/player/: AbstractNimGamePlayer.h  ComputerPlayer.h  HumanPlayer.h  OmaPlayer.h
NimSpielProjekt/game/player/: AbstractPlayer.h  Player.h
NimSpielProjekt/io/: ConsoleWriter.h  Writer.h
SmartPointer/: main.cpp
VectorFiller/: CMakeLists.txt  main.cpp
VectorUebung/: CMakeLists.txt  main.cpp
VectorUebung/atlas/bootstrap/: Bootstrap.h
VectorUebung/atlas/container/: VectorFactory.h
VectorUebung/atlas/container/impl/builder/: VectorFactoryBuilder.h
VectorUebung/atlas/container/impl/decorators/: AbstractVectorFactoryDecorator.h  VectorFactoryBenchmarkDecorator.h  VectorFactoryLoggerDecorator.h  VectorFactorySecureDecorator.h
VectorUebung/atlas/container/impl/parallel/: VectorFactoryParallelImpl.h
VectorUebung/atlas/container/impl/sequential/: VectorFactorySequentialImpl.h
VectorUebung/atlas/generator/: Generator.h
VectorUebung/atlas/time/: Stopwatch.h
interface-segregation-event/src/de/clientside/: Main.java
interface-segregation-gui/src/de/limago/: Fenster.java
